# schema-struct

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
schema-struct/: Cargo.toml
schema-struct-macros/: Cargo.toml
schema-struct-macros/src/: lib.rs  parse.rs  schema.rs  schema_struct.rs  util.rs
schema-struct-macros/src/schema_struct/: from_schema.rs  mod.rs  to_struct.rs  types.rs  util.rs
schema-struct/examples/: advanced.rs  basic.rs  from_file.rs  from_url.rs
schema-struct/src/: internal.rs  lib.rs
schema-struct/tests/: test.rs
schema-struct/tests/schemas/: product.json
src/: parse.rs
tests/: test.rs
