[package]
name = "schema-struct"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
jsonschema = "0.17.0"
prettyplease = "0.2.6"
proc-macro2 = "1.0.56"
quote = "1.0.26"
regex = "1.8.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde = "1.0.163"
serde_json = "1.0.96"
syn = "2.0.15"
