[package]
name = "schema-struct"
version = "0.1.0"
authors = ["WKHAllen <wkhallen@gmail.com>"]
description = "Generate Rust struct definitions from JSON schemas at compile-time."
repository = "https://github.com/softwarewrap/schema-struct"
edition = "2021"

[dependencies]
jsonschema = "0.17.0"
schema-struct-macros = { version = "0.1.0", path = "../schema-struct-macros" }
serde = "1"
serde_json = { version = "1", features = ["preserve_order"] }
